deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reformed-ai
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: reformed-ai.chat
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: reformedgpt-be
            port:
              number: 8004
  - host: reformed-ai.chat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reformedgpt-fe
            port:
              number: 8005
